Fix #24 Padding isn't even on hero-input post-collapse

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -346,7 +346,7 @@ a:hover {
     border-top-width: 0;
     border-bottom: solid 20px #ebebeb;
     margin-left: -20px;
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
 #allheroes {
